--- a/tapir-cli.sample.yaml
+++ b/tapir-cli.sample.yaml
@@ -1,12 +1,13 @@
 mqtt:
-   server:		mqtt.dev.dnstapir.se:8883
+   server:		tls://mqtt.dev.dnstapir.se:8883
 #   uid:			johani
-   clientid:		johani
-   topic:		events/up/johani/frobozz
+   clientid:		this-must-also-be-unique
+#   topic:		events/up/johani/frobozz
    cacert:		/etc/dnstapir/certs/tapirCA.crt
    clientcert:		/etc/dnstapir/certs/mqttclient.crt
    clientkey:		/etc/dnstapir/certs/mqttclient-key.pem
    signingkey:		/etc/dnstapir/certs/mqttsigner-key.pem
    validatorkey:	/etc/dnstapir/certs/mqttsigner-pub.pem
    qos:			2
+   configtopic:		events/up/johani/config
 
